tests/snapshots/logging_test__assert_subcommand_log.snap
---
source: tests/logging_test.rs
expression: normalize_log(&contents)
---
[TIMESTAMP] DEBUG bioassert: parsing assertion: tests/data/empty_file.txt file.exists eq false
[TIMESTAMP] DEBUG bioassert_engine::executor: executing assertion file=tests/data/empty_file.txt metric=file.exists comparator=eq expected=false
[TIMESTAMP] DEBUG bioassert_engine::executor: assertion result success=true actual=false
[TIMESTAMP]  INFO bioassert_engine::executor: PASS. Expected tests/data/empty_file.txt file.exists == false, got false
